added responsive columns for smaller screen and audio on gem click

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
 }
 
-.jumbotron {
+#rules {
     background: #add6ab;
 }
 
@@ -31,4 +31,8 @@ body {
 
 .panel-body {
     font-weight: bold;
+}
+
+#panel-overflow {
+    overflow: hidden;
 }
